--- a/estilo/style.css
+++ b/estilo/style.css
@@ -112,7 +112,7 @@ main h1{
     text-transform: uppercase;
 }
 
-main h2{
+main h2, aside h2{
     color: var(--cor5);
     margin: 10px 10px 20px -20px;
     padding-left: 10px;
@@ -120,6 +120,7 @@ main h2{
     font-family: var(--fonte-destaque2);
     background-image: linear-gradient(to right, var(--cor1), white);
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.251);
+    text-align: left;
 }
 
 
@@ -195,9 +196,10 @@ aside{
     text-align: center;
 }
 
-aside h2{
-    font-family: var(--fonte-destaque1);
+aside > h2{
+    margin-top: -20px;
 }
+
 
 aside > div > h3, main > section > div > div > h3{
     padding: 10px 0 0 0;
